<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.example.new_androidclient.inspection.InspectionDeviceAreaDetailActivity.Listener" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".inspection.InspectionDeviceAreaDetailActivity">

        <com.example.new_androidclient.customize_view.TitleLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:name="@string/inspection_content" />

        <androidx.cardview.widget.CardView
            android:id="@+id/inspection_pic_cardview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200"
            android:layout_below="@id/title"
            android:layout_margin="@dimen/dp_20">

            <EditText
                android:id="@+id/inspection_pic_edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:layout_margin="@dimen/dp_5"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/inspection_device_area_edit_hint"
                android:textSize="@dimen/text_size_16" />
        </androidx.cardview.widget.CardView>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inspection_pic_cardview"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/left_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inspection_device_area_radio_qualify"
                android:textSize="@dimen/text_size_16" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/right_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:text="@string/inspection_device_area_radio_unQualify"
                android:textSize="@dimen/text_size_16" />
        </RadioGroup>


        <LinearLayout
            android:id="@+id/bottom_button_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/selectDevice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginLeft="@dimen/dp_2"
                android:layout_marginRight="@dimen/dp_2"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/bg_blue"
                android:text="@string/inspection_device_rough_select"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_16"
                android:onClick="@{()->listener.selectDevice()}"
                android:visibility="gone"/>

            <Button
                android:id="@+id/nextDevice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginLeft="@dimen/dp_2"
                android:layout_marginRight="@dimen/dp_2"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/bg_blue"
                android:text="@string/nextArea"
                android:textColor="@color/text_white"
                android:onClick="@{()->listener.saveData()}"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

    </RelativeLayout>
</layout>