<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="listener"
            type="com.example.new_androidclient.inspection.AreaDistinguishActivity.Listener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.new_androidclient.customize_view.TitleLayout
            android:id="@+id/inspection_area_distinguish_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:name="@string/inspection_area_distinguish"
            app:showBlueTooth="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/bg_blue"
            android:onClick="@{()->listener.planInspection()}"
            android:text="@string/inspection_area_distinguish_plan"
            android:textColor="@color/text_white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/bg_blue"
            android:onClick="@{()->listener.randomInspection()}"
            android:text="@string/inspection_area_distinguish_random"
            android:visibility="gone"
            android:textColor="@color/text_white" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/inspection_area_distinguish_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_20"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>



    </LinearLayout>
</layout>